feat(back): add representative spirit retrieval API